@@ -1,7 +1,12 @@
 2003-04-25 Mariusz Woloszyn
+	* library.c: romved dups in cameras declaration, cosmetic --about
+	  changes
+
+2003-04-25 Mariusz Woloszyn
 	* README: added to ptp2
 	* test_ptp.c: added to ptp2
 	* TODO: added to ptp2
+
 2003-04-25 Mariusz Woloszyn
 	* library.c: added perror on gp_port_read() and write error; it
 	  won't hurt
